--- a/src/DesignTokensImporter/src/qml/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/qml/CMakeLists.txt
@@ -5,8 +5,8 @@
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/targets)
 
 set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLThemeGenerator.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/QMLThemeGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLDesignGenerator.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/QMLDesignGenerator.cpp
 
     PARENT_SCOPE
 )
