--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -1,4 +1,8 @@
-contrib/updater/
+contrib/updater/filesmacos.txt:generic-api-key:4
+contrib/updater/filesmacosv2.txt:generic-api-key:4
+contrib/updater/filesmacosemergency.txt:generic-api-key:4
+contrib/updater/fileswin64.txt:generic-api-key:4
+contrib/updater/fileswin.txt:generic-api-key:4
 contrib/updater/filesmacosarm64.txt:generic-api-key:4
 src/MEGASync/control/Preferences.cpp:private-key:68
 src/MEGASync/control/Preferences.cpp:private-key:71
