whitelist Google Breakpad

--- a/.gitleaks/gitleaks.toml
+++ b/.gitleaks/gitleaks.toml
@@ -19,5 +19,6 @@ paths = [
     '''MEGAUnitTests/(.*?)''',
     '''Modules/Localization/MEGAL10n/Sources/MEGAL10n/Resources/(.*?)''',
     '''iMEGA/Languages/(.*?)''',
-    '''contrib/updater/(.*?)'''
+    '''contrib/updater/(.*?)''',
+    '''Source/MEGASync/google_breakpad/(.*?)'''
 ]
