CMakeLists.txt: do not build Linux extensions for now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,8 +27,8 @@ if(ENABLE_FINDER_EXT)
 endif()
 
 if(ENABLE_LINUX_EXT)
-    add_subdirectory(MEGAShellExtDolphin)
-    add_subdirectory(MEGAShellExtNautilus)
-    add_subdirectory(MEGAShellExtThunar)
-    add_subdirectory(MEGAShellExtNemo)
+    # add_subdirectory(MEGAShellExtDolphin)
+    # add_subdirectory(MEGAShellExtNautilus)
+    # add_subdirectory(MEGAShellExtThunar)
+    # add_subdirectory(MEGAShellExtNemo)
 endif()
