SNC-3941 : Apply mr review fixes.

--- a/src/DesignTokensImporter/CMakeLists.txt
+++ b/src/DesignTokensImporter/CMakeLists.txt
@@ -11,7 +11,8 @@ set_target_properties(DesignTokensImporter PROPERTIES RUNTIME_OUTPUT_DIRECTORY $
 find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core Gui Xml)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Gui Xml)
 
-set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES})
+set(DESIGN_TOKENS_IMPORTER_SOURCES)
+set(DESIGN_TOKENS_IMPORTER_HEADERS)
 set(INCLUDE_DIRECTORIES)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -21,6 +22,7 @@ include_directories(${INCLUDE_DIRECTORIES})
 target_sources(DesignTokensImporter
     PRIVATE
     ${DESIGN_TOKENS_IMPORTER_SOURCES}
+    ${DESIGN_TOKENS_IMPORTER_HEADERS}
 )
 
 target_link_libraries(DesignTokensImporter
