--- a/src/DesignTokensImporter/src/targets/widgets/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/targets/widgets/CMakeLists.txt
@@ -4,6 +4,11 @@
 
 set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}
     ${CMAKE_CURRENT_SOURCE_DIR}/WidgetsColorDesignTarget.cpp
+
+    PARENT_SCOPE
+)
+
+set(DESIGN_TOKENS_IMPORTER_HEADERS ${DESIGN_TOKENS_IMPORTER_HEADERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/WidgetsColorDesignTarget.h
 
     PARENT_SCOPE
