--- a/src/DesignTokensImporter/src/targets/CMakeLists.txt
+++ b/src/DesignTokensImporter/src/targets/CMakeLists.txt
@@ -8,6 +8,11 @@ set(DESIGN_TOKENS_IMPORTER_HEADERS ${DESIGN_TOKENS_IMPORTER_HEADERS}
     PARENT_SCOPE
 )
 
+set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}
+
+    PARENT_SCOPE
+)
+
 set(INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES}
     ${CMAKE_CURRENT_SOURCE_DIR}
 
