Pragmas for MSVC

--- a/src/MEGASync/CMakeLists.txt
+++ b/src/MEGASync/CMakeLists.txt
@@ -135,11 +135,13 @@ target_link_libraries(MEGAsync
     MEGA::google_breakpad
 )
 
-
 ## Adjust compilation flags for warnings and errors ##
 target_platform_compile_options(
     TARGET MEGAsync
     WINDOWS /W4
+            /wd4201 # nameless struct/union (nonstandard)
+            /wd4458 # identifier hides class member
+            /wd4100 # unreferenced formal parameter
     UNIX $<$<CONFIG:Debug>:-ggdb3> -Wall -Wextra -Wconversion -Wno-unused-parameter
 )
 
