--- a/src/MEGASync/gui/tokenizer/WidgetTokenConfig.h.in
+++ b/src/MEGASync/gui/tokenizer/WidgetTokenConfig.h.in
@@ -1,1 +1,2 @@
 #cmakedefine DESKTOP_APP_GUI_UI_FILES "@DESKTOP_APP_GUI_UI_FILES@"
+#cmakedefine DESKTOP_APP_GUI_UI_FILES_ROOT "@DESKTOP_APP_GUI_UI_FILES_ROOT@"
