Rename gfx provider exe and use random endpoint

--- a/src/MEGASync/CMakeLists.txt
+++ b/src/MEGASync/CMakeLists.txt
@@ -189,7 +189,7 @@ endif()
 
 # Copy GFX worker if needed
 if(TARGET gfxworker)
-    set_target_properties(gfxworker PROPERTIES OUTPUT_NAME "megasync-gfxworker")
+    set_target_properties(gfxworker PROPERTIES OUTPUT_NAME "mega-desktop-app-gfxworker")
     add_custom_command(
         TARGET MEGAsync POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:gfxworker> $<TARGET_FILE_DIR:MEGAsync>
