--- a/src/MEGAShellExt/CMakeLists.txt
+++ b/src/MEGAShellExt/CMakeLists.txt
@@ -3,30 +3,31 @@
 # Library responsible for the integration with windows explorer
 #
 
+project(MEGAShellExt
+    DESCRIPTION "MEGAShellExt"
+    )
+
 add_library(MEGAShellExt SHARED)
 
 set(MEGAShellExt_HEADERS
-    contextmenu/data/ContextMenuData.h
-    contextmenu/gui/AclSetter.h
-    contextmenu/gui/ContextMenuCommandBase.h
-    contextmenu/gui/ContextMenuCommandGetLink.h
-    contextmenu/gui/ContextMenuCommandRemoveFromLeftPane.h
-    contextmenu/gui/ContextMenuCommandSeparator.h
-    contextmenu/gui/ContextMenuCommandUpload.h
-    contextmenu/gui/ContextMenuCommandView.h
-    contextmenu/gui/ContextMenuCommandViewVersions.h
-    contextmenu/gui/framework.h
-    contextmenu/gui/Installer.h
-    contextmenu/gui/PathHelper.h
-    contextmenu/gui/RegistryKey.h
-    contextmenu/gui/SharedCounter.h
-    contextmenu/gui/SharedState.h
-    contextmenu/gui/SimpleFactory.h
+    newContextMenu/data/ContextMenuData.h
+    newContextMenu/gui/ContextMenuCommandBase.h
+    newContextMenu/gui/ContextMenuCommandGetLink.h
+    newContextMenu/gui/ContextMenuCommandRemoveFromLeftPane.h
+    newContextMenu/gui/ContextMenuCommandSeparator.h
+    newContextMenu/gui/ContextMenuCommandUpload.h
+    newContextMenu/gui/ContextMenuCommandView.h
+    newContextMenu/gui/ContextMenuCommandViewVersions.h
+    newContextMenu/utilities/framework.h
+    newContextMenu/utilities/SparsePackageManager.h
+    newContextMenu/utilities/SharedState.h
+    newContextMenu/utilities/SimpleFactory.h
+    newContextMenu/utilities/Utilities.h
     ShellExt.h
     ShellExtNotASync.h
     resource.h
     RegUtils.h
-    ContextMenuExt.h
+    oldContextMenu/ContextMenuExt.h
     ClassFactoryShellExtSyncing.h
     ClassFactoryShellExtSynced.h
     ClassFactoryShellExtPending.h
@@ -37,24 +38,22 @@ set(MEGAShellExt_HEADERS
 )
 
 set(MEGAShellExt_SOURCES
-    contextmenu/data/ContextMenuData.cpp
-    contextmenu/gui/ContextMenuCommandBase.cpp
-    contextmenu/gui/ContextMenuCommandGetLink.cpp
-    contextmenu/gui/ContextMenuCommandRemoveFromLeftPane.cpp
-    contextmenu/gui/ContextMenuCommandSeparator.cpp
-    contextmenu/gui/ContextMenuCommandUpload.cpp
-    contextmenu/gui/ContextMenuCommandView.cpp
-    contextmenu/gui/ContextMenuCommandViewVersions.cpp
-    contextmenu/gui/Installer.cpp
-    contextmenu/gui/PathHelper.cpp
-    contextmenu/gui/RegistryKey.cpp
-    contextmenu/gui/SharedCounter.cpp
-    contextmenu/gui/SharedState.cpp
+    newContextMenu/data/ContextMenuData.cpp
+    newContextMenu/gui/ContextMenuCommandBase.cpp
+    newContextMenu/gui/ContextMenuCommandGetLink.cpp
+    newContextMenu/gui/ContextMenuCommandRemoveFromLeftPane.cpp
+    newContextMenu/gui/ContextMenuCommandSeparator.cpp
+    newContextMenu/gui/ContextMenuCommandUpload.cpp
+    newContextMenu/gui/ContextMenuCommandView.cpp
+    newContextMenu/gui/ContextMenuCommandViewVersions.cpp
+    newContextMenu/utilities/SparsePackageManager.cpp
+    newContextMenu/utilities/SharedState.cpp
+    newContextMenu/utilities/Utilities.cpp
     ShellExt.cpp
     ShellExtNotASync.cpp
     RegUtils.cpp
     dllmain.cpp
-    ContextMenuExt.cpp
+    oldContextMenu/ContextMenuExt.cpp
     ClassFactoryShellExtSyncing.cpp
     ClassFactoryShellExtSynced.cpp
     ClassFactoryShellExtPending.cpp
@@ -89,8 +88,39 @@ target_link_libraries(MEGAShellExt
 
 target_include_directories(MEGAShellExt
     PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/contextmenu/data
-    ${CMAKE_CURRENT_SOURCE_DIR}/contextmenu/gui
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/newContextMenu/data
+    ${CMAKE_CURRENT_SOURCE_DIR}/newContextMenu/gui
+    ${CMAKE_CURRENT_SOURCE_DIR}/newContextMenu/utilities
+    ${CMAKE_CURRENT_SOURCE_DIR}/oldContextMenu
 )
 
 target_compile_features(MEGAShellExt PRIVATE cxx_std_17)
+
+#if(ENABLE_EXPLORER_EXT_SPARSE)
+    if(MSVC)
+        # Create sparse package
+        add_custom_command(
+            TARGET MEGAShellExt
+            POST_BUILD
+            COMMAND makeappx pack "/nv" "/o" "/d" "${CMAKE_CURRENT_SOURCE_DIR}/newContextMenu/gui/packaging" "/p" "MEGAShellExt.msix"
+            COMMENT "Creating sparse package for Win11 context menus"
+        )
+
+        # Sign sparse package
+        add_custom_command(
+            TARGET MEGAShellExt
+            POST_BUILD
+            COMMAND signtool sign "/sha1" $ENV{SHELL_EXT_CERT_SHA} "/td" SHA256 "/fd" SHA256 "MEGAShellExt.msix"
+            COMMENT "Signing sparse package"
+        )
+
+        # Sign dll
+        add_custom_command(
+            TARGET MEGAShellExt
+            POST_BUILD
+            COMMAND signtool sign "/sha1" $ENV{SHELL_EXT_CERT_SHA} "/td" SHA256 "/fd" SHA256 "MEGAShellExt.dll"
+            COMMENT "Signing DLL"
+        )
+    endif()
+#endif()
