--- a/src/MEGASync/CMakeLists.txt
+++ b/src/MEGASync/CMakeLists.txt
@@ -89,6 +89,8 @@ target_include_directories(MEGAsync PRIVATE ${CMAKE_CURRENT_LIST_DIR}
 # Include modules in subdirectories with sources for Desktop App
 add_subdirectory(google_breakpad)
 
+set(ExecutableTarget MEGAsync)
+
 include(control/control.cmake)
 include(gui/gui.cmake)
 include(notifications/notifications.cmake)
