SNC-3098: Added MEGA menu context.

--- a/src/MEGAShellExt/CMakeLists.txt
+++ b/src/MEGAShellExt/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(MEGAShellExt SHARED)
 set(MEGAShellExt_HEADERS
     newContextMenu/data/ContextMenuData.h
     newContextMenu/gui/ContextMenuCommandBase.h
+    newContextMenu/gui/ContextMenuCommand.h
     newContextMenu/gui/ContextMenuCommandGetLink.h
     newContextMenu/gui/ContextMenuCommandRemoveFromLeftPane.h
     newContextMenu/gui/ContextMenuCommandSeparator.h
@@ -40,6 +41,7 @@ set(MEGAShellExt_HEADERS
 set(MEGAShellExt_SOURCES
     newContextMenu/data/ContextMenuData.cpp
     newContextMenu/gui/ContextMenuCommandBase.cpp
+    newContextMenu/gui/ContextMenuCommand.cpp
     newContextMenu/gui/ContextMenuCommandGetLink.cpp
     newContextMenu/gui/ContextMenuCommandRemoveFromLeftPane.cpp
     newContextMenu/gui/ContextMenuCommandSeparator.cpp
