SNC-5336: Remove Laf.h generated file

--- a/src/MEGASync/CMakeLists.txt
+++ b/src/MEGASync/CMakeLists.txt
@@ -210,7 +210,7 @@ if (WIN32)
     add_custom_command(
             TARGET MEGAsync
             POST_BUILD
-            COMMAND "del.exe \"${CMAKE_CURRENT_SOURCE_DIR}\\platform\\win\\Laf.h"
+            COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_CURRENT_SOURCE_DIR}/platform/win/Laf.h"
             COMMENT "Remove Laf.h not needed after build."
         )
 endif()
